Fix for bug 252589 (Textbox attribute "multiline" seems broken). r+sr=jst.